--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,138 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+.menuScrollable::-webkit-scrollbar {
+  width: 10px;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+/* Track */
+.menuScrollable::-webkit-scrollbar-track {
+  background: #614949;
+  border-radius: 10px;
 }
 
-* {
+/* Handle */
+.menuScrollable::-webkit-scrollbar-thumb {
+  background: rgb(34, 151, 106);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.menuScrollable::-webkit-scrollbar-thumb:hover {
+  background: rgb(20, 172, 7);
+}
+
+.sidebarMenuIcon {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.3rem;
+}
+
+.not_found__body {
   box-sizing: border-box;
+  height: calc(100vh - 100px);
+  background-color: #000000;
+  background-image: radial-gradient(#11581e, #041607),
+    url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: "Inconsolata", Helvetica, sans-serif;
+  font-size: 1.5rem;
+  color: rgba(128, 255, 128, 0.8);
+  text-shadow: 0 0 1ex rgba(51, 255, 51, 1), 0 0 2px rgba(255, 255, 255, 0.8);
+}
+
+.noise {
+  pointer-events: none;
+  position: absolute;
+  width: 100%;
+  height: calc(100vh - 100px);
+  background-image: url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -1;
+  opacity: 0.02;
+}
+
+.overlay {
+  pointer-events: none;
+  position: absolute;
+  width: 100%;
+  height: calc(100vh - 100px);
+  background: repeating-linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 0,
+    rgba(0, 0, 0, 0.3) 50%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  background-size: auto 4px;
+  z-index: 1;
+}
+
+.overlay::before {
+  content: "";
+  pointer-events: none;
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: calc(100vh - 100px);
+  background-image: linear-gradient(
+    0deg,
+    transparent 0%,
+    rgba(32, 128, 32, 0.2) 2%,
+    rgba(32, 128, 32, 0.8) 3%,
+    rgba(32, 128, 32, 0.2) 3%,
+    transparent 100%
+  );
+  background-repeat: no-repeat;
+  animation: scan 7.5s linear 0s infinite;
+}
+
+@keyframes scan {
+  0% {
+    background-position: 0 -100vh;
+  }
+  35%,
+  100% {
+    background-position: 0 100vh;
+  }
+}
+
+.terminal {
+  box-sizing: inherit;
+  position: absolute;
+  height: 100%;
+  width: 1000px;
+  max-width: 100%;
+  padding: 4rem;
+  text-transform: uppercase;
+}
+
+.output {
+  color: rgba(128, 255, 128, 0.8);
+  text-shadow: 0 0 1px rgba(51, 255, 51, 0.4), 0 0 2px rgba(255, 255, 255, 0.8);
+}
+
+.output::before {
+  content: "> ";
+}
+
+/* song list animatations & custom styles */
+
+.highlightActiveSong {
+  background-color: rgba(168, 167, 243, 0.637);
+  animation: highlight_bounce 5s ease infinite;
+}
+
+@keyframes highlight_bounce {
+  0% {
+    background-color: rgba(168, 167, 243, 0.194);
+  }
+  50% {
+    background-color: rgba(168, 167, 243, 0.09);
+  }
+  100% {
+    background-color: rgba(168, 167, 243, 0.194);
+  }
 }
