like/dislike feature api requests hooks, player bar accomodating new favoriting feature etc

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -136,3 +136,12 @@
     background-color: rgba(168, 167, 243, 0.194);
   }
 }
+
+/* .likeIconActiveState {
+  animation: shakeExcitingly 2s ease-in forwards;
+}
+@keyframes shakeExcitingly {
+  0% {
+    tran
+  }
+} */
